--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Simon</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-  <link rel="icon" href="favicon (3).ico">
+  <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
